<resources>
    <string name="app_name">Kothakhoj</string>
    <string name="app_logo">App Logo</string>
    <string name="app_name_str">Kotha Khoj</string>
    <string name="seeker_choice">Look for a room</string>
    <string name="renter_choice">Rent a room</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_msg">Don\'t have an account yet? <b><font color="#139fcd">Register</font></b></string>
    <string name="full_name">Full Name</string>
    <string name="contact_no">Contact No</string>
    <string name="create_account">Create An Account</string>
    <string name="back_arrow_key">back arrow key</string>
    <string name="login_msg">Already Have an account? <b><font color="#139fcd">Login</font></b></string>
    <string name="terms_and_privacy">By creating an account you agree to our \nTerms of Service and Privacy Policy.</string>
    <string name="rent_radio">Look for rooms</string>
    <string name="seek_radio">Rent rooms</string>
    <string name="usage_type">Usage Type:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile_photo">profile photo</string>
    <string name="renter_msg">Currently you don\'t have any rooms for renting. Please click on <font size="20">\u2295</font> button to add new rooms</string>
    <string name="roominfo">Enter your room details below. Information marked with * are required.</string>
    <string name="photo_info">You can select more\n than one photo\n at a time.</string>
    <string name="saved_msg">you have not saved any rooms</string>

    <string-array name="preferences">
        <item>Anyone</item>
        <item>Family</item>
        <item>Bachelors</item>
        <item>Female</item>
    </string-array>

    <string-array name="contactTiming">
        <item>Anytime</item>
        <item>Evening</item>
        <item>Morning</item>
        <item>Except Office Hours</item>
    </string-array>

    <string-array name="floors">
        <item>Ground Floor</item>
        <item>1st Floor</item>
        <item>2nd Floor</item>
        <item>3rd Floor</item>
        <item>4th Floor</item>
        <item>5th Floor</item>
        <item>Others</item>
    </string-array>

    <string-array name="roomType">
        <item>1 Room</item>
        <item>2 Rooms</item>
        <item>1 RK</item>
        <item>1 BHK</item>
        <item>2 BHK</item>
        <item>3 BHK</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
