<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme.NoActionBar"
    android:fitsSystemWindows="true"
    tools:context=".RegisterFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/back_arrow_key"
                android:drawableStart="@drawable/ic_back_arrow"
                android:layout_marginStart="10dp"
                android:id="@+id/back_arrow_register"
                android:layout_alignParentTop="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/login_linear"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView

                    android:layout_marginTop="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto_bold"
                    android:id="@+id/logo_login"
                    />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:background="@null"
                    android:layout_height="@dimen/input_layout_height">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/full_name"
                        android:padding="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:id="@+id/name_et_reg"
                        android:inputType="text"
                        android:background="@drawable/edittext_background"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:layout_height="@dimen/input_layout_height">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:padding="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:id="@+id/email_et_reg"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/edittext_background"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:layout_height="@dimen/input_layout_height">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:textColor="@android:color/white"
                        android:padding="10dp"
                        android:textColorHint="@android:color/white"
                        android:id="@+id/pass_et_reg"
                        android:inputType="textPassword"
                        android:background="@drawable/edittext_background"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@android:color/white"
                    android:layout_height="@dimen/input_layout_height">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/contact_no"
                        android:textColor="@android:color/white"
                        android:padding="10dp"
                        android:textColorHint="@android:color/white"
                        android:id="@+id/contact_et_reg"
                        android:inputType="number"
                        android:background="@drawable/edittext_background"
                        />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">



                    <TextView
                        android:gravity="center"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/usage_type"/>

                    <RadioGroup
                        android:id="@+id/radio_profile_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="100dp"
                            android:layout_height="65dp"
                            android:buttonTint="@android:color/white"
                            android:id="@+id/radio_renter"
                            android:gravity="center"
                            android:padding="2dp"
                            android:button="@android:color/transparent"
                            android:background="@drawable/radio_background"
                            android:textColor="@android:color/black"
                            android:text="@string/rent_radio"
                            android:checked="true"
                            android:drawableBottom="@drawable/ic_radio_checked"
                            />

                        <RadioButton
                            android:layout_width="100dp"
                            android:layout_height="65dp"
                            android:id="@+id/radio_seeker"
                            android:buttonTint="@android:color/white"
                            android:layout_marginStart="25dp"
                            android:padding="2dp"
                            android:gravity="center"
                            android:button="@android:color/transparent"
                            android:background="@drawable/radio_background"
                            android:textColor="@android:color/black"
                            android:text="@string/seek_radio" />

                    </RadioGroup>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="15dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite50"
                    android:text="@string/terms_and_privacy"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_background"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:id="@+id/register_btn_reg"/>


                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/login_msg"
                    android:textSize="14sp"
                    android:id="@+id/register_option"
                    android:textColor="@color/colorWhite50"
                    android:fontFamily="@font/roboto_bold"
                    />

            </LinearLayout>

        </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progress_register"
        android:background="@color/colorProgressBackground"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </RelativeLayout>

</FrameLayout>