<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".FirstActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parent_frame_layout">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_str"
                    android:textSize="34sp"
                    android:drawableTop="@drawable/ic_kothakhoj_logo_big"
                    android:fontFamily="@font/roboto_bold"
                    android:id="@+id/landing_logo"
                    />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="65dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/landing_logo"
                    app:layout_constraintTop_toBottomOf="@id/landing_logo"
                    >


                    <Button
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:background="@drawable/button_background"
                        android:id="@+id/login_btn"
                        />


                    <Button
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="45dp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:text="@string/register"
                        android:background="@drawable/button_background"
                        android:id="@+id/register_btn"
                        />


                </LinearLayout>
            </RelativeLayout>

        </FrameLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>